# phantom_algebra

./: .gitignore  CHANGES.md  Changes.md  Makefile  README.md  dune-project  phantom-algebra.opam  phantom_algebra.opam
docs/: index.html
docs/phantom-algebra/: index-generated.mld  index.html  page-index.odoc  phantom_algebra.odoc  phantom_algebra__Core.odoc  phantom_algebra__Flat_array.odoc  phantom_algebra__Interface.odoc  phantom_algebra__Math.odoc  phantom_algebra__Type_functions.odoc
docs/phantom-algebra/Phantom_algebra/: index.html
docs/phantom-algebra/Phantom_algebra/Core/: index.html
docs/phantom-algebra/Phantom_algebra/Flat_array/: index.html
docs/phantom-algebra/Phantom_algebra/Interface/: index.html
docs/phantom-algebra/Phantom_algebra/Math/: index.html
docs/phantom-algebra/Phantom_algebra/Type_functions/: index.html
docs/phantom-algebra/Phantom_algebra__Core/: index.html
docs/phantom-algebra/Phantom_algebra__Core/Rank/: index.html
docs/phantom-algebra/Phantom_algebra__Flat_array/: index.html
docs/phantom-algebra/Phantom_algebra__Interface/: index.html
docs/phantom-algebra/Phantom_algebra__Interface/module-type-Basic/: index.html
docs/phantom-algebra/Phantom_algebra__Interface/module-type-Cloning/: index.html
docs/phantom-algebra/Phantom_algebra__Math/: index.html
docs/phantom-algebra/Phantom_algebra__Type_functions/: index.html
example/: a.ml  all.ml  dune  indexing.ml  jbuild  tools.ml
src/: core.ml  dune  flat_array.ml  interface.ml  jbuild  math.ml  math.mli  phantom_algebra.ml  phantom_algebra.mli  type_functions.ml
(+19 files in other folders)
