name: "phantom_algebra"
version:"0.1"
opam-version: "1.2"
license: "MIT"
maintainer: "Florian Angeletti <octa@polychoron.fr>"
authors: "Florian Angeletti <octa@polychoron.fr>"
dev-repo: "git+https://github.com/Octachron/phantom-algebra"
homepage: "https://github.com/Octachron/phantom-algebra"
bug-reports: "https://github.com/Octachron/pantom-algebra/issues"

build:[
 ["jbuilder" "build" "-p" name "-j" jobs]
]

build-doc:[
  [ "jbuilder" "build" "-p" name "-j" jobs "@doc" ]
]

available: [ ocaml-version >= "4.02.3"

depends: [
  "jbuilder" {build}
  "cppo" {build}
  ]
